<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:orientation="vertical"
    android:keepScreenOn="true">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include layout="@layout/fragment_map_bottom_sheet"/>

    <RelativeLayout
        android:id="@+id/control_extreme_points_layout"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/background_control_extreme_points">

        <Button
            android:id="@+id/btn_control_northernmost_point"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/north"/>

        <Button
            android:id="@+id/btn_control_easternmost_point"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/east"/>

        <Button
            android:id="@+id/btn_control_westernhost_point"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/west"/>

        <Button
            android:id="@+id/btn_control_southernmost_point"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/south"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>